--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm run build-css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "deploy": "npm run build && mv build/index.html build/200.html && surge build your-custom-domain",
     "eject": "react-scripts eject"
   },
   "devDependencies": {}
