--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "my-site",
+  "name": "Anders Wood",
   "version": "0.1.0",
   "private": true,
+  "homepage": "www.anders-wood.com",
   "dependencies": {
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.0.2",
