--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-favicon": "0.0.9",
+    "react-modal": "^2.2.4",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.10"
   },
